# anylive-tts-automation

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  auto_faq.py  auto_script.py  auto_tts.py  mahajak_tts.py  menubar_app.spec  menubar_gui.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_automation.sh  shared.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: task-2-csv-parsing.txt  task-7-cli-help.txt
app/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
app/e2e/: fixtures.ts  global-setup.ts  global-teardown.ts
app/sidecar/: build_sidecar.sh  requirements.txt  rthook_playwright.py  server.py  sidecar.spec
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
browser_data/: .com.google.chrome.for.testing.BihYpI  .com.google.chrome.for.testing.SS77S0  .com.google.chrome.for.testing.tdRzPq  Local State
browser_data/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  (+9 more)
configs/: CLAUDE.md  default.example.json  default.json  default_faq.json  faq_template.json  mahajak.json  mahajak_script.json  script_template.json  template.json  test_template.csv
spike/: NOTES.md  spike.spec  spike_server.py  test_spike_server.py
tests/: conftest.py  test_auto_faq.py  test_auto_script.py  test_auto_tts.py  test_config.py  test_csv_parser.py  test_faq_run_job.py  test_keyboard_modifier.py  test_playwright_paths.py  test_report.py  test_script_run_job.py  test_session.py  test_shared.py
(+663 files in other folders)
