[project]
name = "anylive-tts-automation"
version = "2.0.0"
description = "Playwright-based TTS script automation for AnyLive platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
